--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "react-scripts build",
     "lint": "tslint src/**/*.tsx",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "browserslist": [
     ">0.2%",
@@ -26,6 +28,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@storybook/addon-actions": "^4.1.4",
+    "@storybook/addon-links": "^4.1.4",
+    "@storybook/addons": "^4.1.4",
+    "@storybook/react": "^4.1.4",
+    "@types/storybook__react": "^4.0.0",
+    "babel-loader": "^8.0.4",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1"
   }
