--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "tslint src/**/*.tsx",
+    "lint": "npm-run-all lint:*",
+    "lint:ts": "tslint src/**/*.tsx",
     "lint:css": "stylelint src/**/*.tsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -40,11 +41,13 @@
     "@storybook/react": "^4.1.4",
     "@types/storybook__react": "^4.0.0",
     "babel-loader": "^8.0.4",
+    "npm-run-all": "^4.1.5",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.5.2",
     "tslint": "^5.12.0",
-    "tslint-config-airbnb": "^5.11.1"
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-react": "^3.6.0"
   }
 }
