--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/storybook__react": "^4.0.0",
     "babel-loader": "^8.0.4",
     "npm-run-all": "^4.1.5",
+    "react-axe": "^3.1.0",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
